syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.semantyca.jirascope.grpc.dictionary.user";
option java_outer_classname = "UserGrpcServicesOuter";

package jirascope.system;

message UserProto {
  string id = 1;
  string login = 2;
  string pwd = 3;
  string email = 4;
}

/*message GetUserRequest {
  string id = 1;
}

message AddUserRequest {
  UserProto user = 1;
}

message UpdateUserRequest {
  UserProto user = 1;
}*/

service UserGRPCService {
  rpc GetAllUsers (google.protobuf.Empty) returns (stream UserProto);
  //rpc GetUser (GetUserRequest) returns (UserProto);
  //rpc AddUser (AddUserRequest) returns (google.protobuf.Empty);
  //rpc UpdateUser (UpdateUserRequest) returns (UserProto);
}


